# ogl-playground

./: .gitignore  CMakeLists.txt  README.md  camera.h  main.cpp  shader.h  shaders.h
shaders/: 1.colors.fs  texture_vertex_shader
